--- a/utils.css
+++ b/utils.css
@@ -15,6 +15,8 @@ body {
   min-height: 100vh;
   width: 100vw;
 
+  justify-items: stretch;
+
   background-color: #cecece;
   color:#3e3e3e;
   font-family: Roboto, Helvetica, Arial, sans-serif;
@@ -45,7 +47,6 @@ h1 > img {
 }
 
 header {
-  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -67,7 +68,6 @@ header > p {
 }
 
 main {
-  width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
